--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,34 +1,60 @@
 .Home {
     height: 100vh; /* Make sure it covers the entire viewport height */
-     text-align: center; /* Centers text inside the div */
+    text-align: center; /* Centers text inside the div */
     font-family: 'Crimson Text';
-    color: antiquewhite;
 
     display: flex;
+    flex-direction: column; /* Ensures content flows from top to bottom */
     justify-content: center; /* Centers content horizontally */
     align-items: center; /* Centers content vertically */
-    flex-direction: column; /* Ensures content flows from top to bottom */
+
+    overflow: hidden; /* Hide scrollbars */
+}
+
+.HomeContent {
+    background-color: rgba(255, 250, 250, .80);
+    padding: 1em;
+    width: 100%;
 }
 
 .background-image {
     position: absolute; /* Position the image */
     width: 100%;
-    height: 100%;
     object-fit: cover; /* Ensure the image covers the container */
-    opacity: 0.75; /* Change the opacity of the image */
+    opacity: .8;
     z-index: -1; /* Make sure the image stays behind the text */
 }
 
+.profile-image {
+    height: 11em;
+    border-radius: 50%;
+    opacity: 0.90;
+    margin-top: .2em;
+}
+
 h1, p {
-    margin: .1em;
+    margin: .2em;
+    color: #282c34;
 }
 
 h1 {
-    font-weight: 400;
-    font-size: 2.5em;
+    font-weight: 600;
+    font-size: 2.3em;
 }
 
 p {
-    font-size: 1.3em;
-    opacity: 70%;
+    font-size: 1em;
+}
+
+a {
+    color: #282c34;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline; /* Add underline on hover */
+}
+
+.spaced {
+    margin: 0 .5em;
 }
