--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,8 @@
 .Home {
-    height: 100vh; /* Make sure it covers the entire viewport height */
+    min-height: 100vh; /* Extend the height beyond the viewport */
+    overflow: hidden; /* Hide scrollbars */
+    position: relative; /* Make it relative for absolute positioning of child elements */
+
     text-align: center; /* Centers text inside the div */
     font-family: 'Crimson Text';
 
@@ -7,19 +10,22 @@
     flex-direction: column; /* Ensures content flows from top to bottom */
     justify-content: center; /* Centers content horizontally */
     align-items: center; /* Centers content vertically */
-
-    overflow: hidden; /* Hide scrollbars */
 }
 
-.HomeContent {
+.home-content {
     background-color: rgba(255, 250, 250, .80);
     padding: 1em;
     width: 100%;
+    position: relative; /* Keeps the HomeContent positioned inside the Home section */
+    z-index: 1; /* Ensure it's on top of the background image */
 }
 
 .background-image {
     position: absolute; /* Position the image */
+    top: 0;
+    left : 0;
     width: 100%;
+    height: 100vh;
     object-fit: cover; /* Ensure the image covers the container */
     opacity: .8;
     z-index: -1; /* Make sure the image stays behind the text */
@@ -30,6 +36,39 @@
     border-radius: 50%;
     opacity: 0.90;
     margin-top: .2em;
+}
+
+.personal-projects-nav {
+    position: relative; /* To position the photos relative to this container */
+    width: auto; /* Let the width adjust based on the photos' content */
+    height: auto; /* Let the height adjust based on the photos' content */
+    margin: 0 auto; /* Center the container */
+    /*margin: 10em; !* Center the container *!*/
+}
+
+.photo {
+    position: absolute; /* Allows precise positioning */
+    top: 50%; /* Vertically center the photos */
+    left: 50%; /* Horizontally center the photos */
+    transform: translate(-50%, -50%); /* Offset positioning to the center */
+    height: 11em; /* Set consistent height matching your profile photo */
+    width: auto; /* Maintain aspect ratio */
+    transition: transform 0.3s ease; /* Add smooth transition effect */
+}
+
+.photo1 {
+    transform: translate(-50%, -50%) rotate(-15deg); /* Tilt photo 1 to the left */
+    z-index: 1; /* Place it behind the others */
+}
+
+.photo2 {
+    transform: translate(-50%, -50%) rotate(0deg); /* Keep photo 2 straight */
+    z-index: 2; /* Place it above photo 1 */
+}
+
+.photo3 {
+    transform: translate(-50%, -50%) rotate(15deg); /* Tilt photo 3 to the right */
+    z-index: 3; /* Place it above the others */
 }
 
 h1, p {
